--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,5 @@ config.status
 .vs/Xavander-Core/v15/.suo
 .vs/Xavander-Core/v15/Browse.VC.db
 .vs/Xavander-Core/v15/Browse.VC.opendb
+
+\.vs/Xavander-Core/v15/ipch/AutoPCH/5b4a6a6c12422a04/PROTOCOL\.ipch
